2007-03-22 Fred Kiefer <FredKiefer@gmx.de>

	* Source/art/ARTGState.h: Declare internal methods.
	* Source/art/ARTGState.m: New file split out from ARTContext.m.
	* Source/art/ARTConext.m: Removed ARTContext bits.
	* Source/art/blit-main.m: New file split out from blit.m.
	* Source/art/blit.m: Removed self include stuff.
	* Source/GNUmakefile: Add new source files.
	* Source/art/composite.m: Adopt to GNUstep coding style.

2007-03-22 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m (-compositeGState:...fraction:):
	Correct computation of source rectangle and add flip correction.
	The later is currently commented out. 

2007-03-21 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m: General clean-up and optimisation of
	this class.

2007-03-21 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m (-setColor:state): Always call cairo_set_source_rgba().
	* Source/cairo/CairoGState.m (-GSReadRect:): Correct placement of rectangle.
	* Source/cairo/CairoGState.m (-compositerect:op:): Use
	cairo_paint() instead of cairo_fill().

2007-03-18 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m: A complete rewrite, now path and
	transformation handling from the super class get used.
	* Source/cairo/CairoFontInfo.m (-setupAttributes:,
	-drawGlyphs:length:on:): Don't invert the font matrix.
	* Source/gsc/GSGState.m (-DPSrectclip::::, -DPSrectfill::::,
	-DPSrectstroke::::): Use NSBezierPath to get correct results when rotated.

2007-03-11 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGDragView.m (GSActionForDragOperation,
	GSDragOperationForAction): Completed and corrected drag type
	mapping between xdnd and OpenStep. NSDragOperationAll should now
	be map back correctly when converted to xdnd and back again.

2007-03-07 Xavier Glattard <xavier.glattard@online.fr>

	* Source/win32/Event_format.sed,
	* Source/win32/GSDisplayServer_details.m,
	* Source/win32/RELEASE_NOTES,
	* Source/win32/w32_config.h,
	* Source/win32/w32_debug.m,